# platanus-hack-25-team-4

./: .env.example  .env.test  .gitignore  AGENTS.md  DESIGN.md  Makefile  OBSERVER_GRAPH_FEATURE_SPEC.md  README.md  docker-compose.test.yml  docker-compose.yml  nginx.conf  platanus-hack-project.json  process_pdf.py  process_pdf_with_adapter.py  project-description.md  pyrightconfig.json
circles/: .coverage  Dockerfile.etl  README.md  coverage.xml  pyproject.toml  pytest.ini
circles-flutter/: pubspec.yaml
circles/.dart_tool/flutter_build/0e7bdc8bee20f91daae0a4544785215a/: .filecache  IssueLaunchRootViewControllerAccess.stamp  debug_ios_lldb_init.stamp  debug_unpack_ios.stamp  outputs.json
circles/android/: gradle.properties
circles/docs/interviews/: README.md  interview.examples.json  turn.prompt.txt
circles/docs/profiles/: README.md  generator.prompt.txt  profile.example.json
circles/ios/Runner/: AppDelegate.swift  Info.plist
circles/ios/Runner.xcodeproj/: project.pbxproj
circles/lib/: main.dart
circles/lib/core/background/: location_reporting_worker.dart
circles/lib/core/storage/: credentials_storage.dart
circles/lib/core/theme/: app_theme.dart
circles/lib/core/widgets/: auth_layout.dart  primary_button.dart
circles/lib/features/app/: app_state.dart
circles/src/: database.py  examples.py  profile_schema.py
circles/src/backend/: .env.example  .eslintignore  .eslintrc.cjs  Dockerfile  app.ts  docker-compose.dev.yml  docker-compose.yml  env.example  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.test.json
circles/src/backend/config/: collision.config.ts  env.ts  observer.config.ts
circles/src/backend/docs/: AUTH_PROCESS.md  COLLISION_MATCHING.md  DATA_MODELS.md  ENDPOINTS.md  ENDPOINTS_STATUS.md  README.md
circles/src/backend/infrastructure/: redis.ts
circles/src/backend/lib/: prisma.ts
circles/src/backend/middleware/: auth.ts  validateBody.ts
circles/src/backend/middlewares/: auth.middleware.ts  error-handler.middleware.ts  not-found-handler.middleware.ts  rate-limiter.middleware.ts  request-logger.middleware.ts  validate-body.middleware.ts
circles/src/backend/prisma/: schema.prisma
circles/src/backend/repositories/: chat-repository.ts  circle-repository.ts  circleRepository.ts  magic-link-token-repository.ts  message-repository.ts  user-repository.ts  userRepository.ts
circles/src/backend/routes/: auth.ts  chats.ts  circles.ts  collisions.ts  health.ts  index.ts  locations.ts  matches.ts  missions.ts  observer.ts  users.ts
circles/src/backend/scripts/: add-spatial-indexes.sql
circles/src/backend/services/: agent-match-service.ts  auth-service.ts  authService.ts  aws-ses-email-service.ts  chat-service.ts  circle-service.ts  circleService.ts  collision-detection-service.ts  conversation-observer.service.ts  email-service.ts  location-service.ts  match-service.ts  message-service.ts  profile-service.ts  profileService.ts  resend-email-service.ts  user-service.ts
circles/src/backend/src/: server.ts
circles/src/backend/tests/: agent-match-service.test.ts  auth-service.test.ts  circle-service.test.ts  collision-detection-service.test.ts  e2e-collision-match-chat.test.ts  profile-service.test.ts  profileService.test.ts
circles/src/backend/types/: agent-persona.type.ts  chat.type.ts  circle.ts  circle.type.ts  enums.type.ts  express.d.ts  index.ts  magic-link-token.type.ts  match.type.ts  message.type.ts  user.type.ts
circles/src/backend/utils/: async-handler.util.ts  geo.util.ts  logger.util.ts  obfuscate.util.ts
circles/src/backend/workers/: cleanup-worker.ts  index.ts  mission-worker.ts  runner.ts  stability-worker.ts
circles/src/consolidation/: __init__.py  base_consolidation_strategy.py  data_aggregator.py  llm_adapter.py  orchestrator.py  sanitizer.py  strategy.py
circles/src/etl/: main.py
circles/src/etl/adapters/: __init__.py  base.py  photo_adapter.py  registry.py  remaining_adapters.py  resume_adapter.py  stub_adapters.py  voice_note_adapter.py
circles/src/etl/api/: __init__.py  auth.py
circles/src/etl/core/: __init__.py  config.py  exceptions.py  result.py  security.py
circles/src/etl/models/: __init__.py  all_models.py
circles/src/etl/processors/: __init__.py  calendar_processor.py  chat_transcript_processor.py  pdf_processor.py  photo_processor.py  resume_processor.py  voice_note_processor.py
circles/src/etl/repositories/: __init__.py  base_repository.py  photo_repository.py
circles/src/etl/services/: __init__.py  image_service.py
circles/src/etl/tasks/: __init__.py  celery_app.py  consolidation_tasks.py  process_tasks.py  processor_tasks.py
circles/src/utils/: uuid_utils.py
circles/test/: login_smoke_test.dart  profile_validator_test.dart
circles/tests/: __init__.py  conftest.py  generate_fixtures.py  test_base.py  test_etl_llm_integration.py
circles/tests/config/: test_settings.py
circles/tests/etl/repositories/: test_photo_repository.py
circles/tests/fixtures/: fixture_factories.py
circles/tests/fixtures/audio/: sample_voice_note.json
circles/tests/fixtures/blog_posts/: sample_blog_post.json
circles/tests/fixtures/calendars/: sample_calendar.json
circles/tests/fixtures/documents/: sample.html
circles/tests/fixtures/emails/: sample_email.json
circles/tests/fixtures/mock_responses/: claude_vision_responses.json  whisper_responses.json
circles/tests/fixtures/photos/: sample_photo.json
circles/tests/integration/: test_calendar_processor_e2e.py  test_chat_transcript_processor_e2e.py  test_consolidation_e2e.py  test_pdf_processor_e2e.py  test_processors_e2e.py  test_voice_note_processor_e2e.py
circles/tests/llm/: conftest.py  test_protocol.py
circles/tests/markdown/: conftest.py  test_markitdown_integration.py  test_markitdown_unit.py  test_protocol.py
circles/tests/mocks/: mock_claude_api.py  mock_whisper_api.py
circles/tests/tests/: __init__.py  test_result.py
circles/tests/unit/: test_consolidation.py  test_profile_schema_starter.py
circles/tests/vlm/: conftest.py  test_protocol.py  test_smolvlm_integration.py  test_smolvlm_unit.py
(+161 files in other folders)
