[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circles"
version = "0.1.0"
description = "Circles - User profile and matching system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.74.1",
    "celery>=5.5.3",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "transformers>=4.40.0", # HuggingFace transformers for SmolVLM
    "torch>=2.0.0", # PyTorch with MPS support for Apple Silicon
    "pillow>=10.0.0", # Image processing for VLM
    "markitdown[all]>=0.1.0", # Markdown conversion from various formats
    "openai>=1.0.0", # OpenAI API client for GPT models
    "anthropic>=0.18.0", # Anthropic API client for Claude models
    "reportlab>=4.4.5",
    "fakeredis>=2.32.1",
    "asyncpg>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",              # Core testing framework
    "pytest-asyncio>=0.21.0",     # Async test support
    "pytest-mock>=3.12.0",        # Mocking utilities
    "pytest-cov>=4.1.0",          # Coverage reporting
    "pytest-timeout>=2.2.0",      # Test timeout management
    "hypothesis>=6.92.0",         # Property-based testing
    "faker>=22.0.0",              # Test data generation
    "reportlab>=4.0.0",           # PDF generation for test fixtures
    "ruff>=0.1.0",                # Fast Python linter and formatter
    "aiosqlite>=0.20.0",          # Async SQLite support for testing
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
    "C90",    # mccabe complexity
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "LOG",    # flake8-logging
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "C901",   # complex-statement (too strict)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**" = ["F841"]     # Allow unused variables in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
